add config support

--- a/flo-kernel/init/Kconfig
+++ b/flo-kernel/init/Kconfig
@@ -754,6 +754,9 @@ config RT_GROUP_SCHED
 	  realtime bandwidth for them.
 	  See Documentation/scheduler/sched-rt-group.txt for more information.
 
+config GRR_GROUP_SCHED
+	bool "Group scheduling for SCHED_GRR"
+	default n
 endif #CGROUP_SCHED
 
 config BLK_CGROUP
